overflow fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,7 +126,6 @@ html,
 body {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
   background-color: rgb(var(--background));
   max-height: 100lvh;
   height: 100%;
